--- a/themes/default/style/theme.css
+++ b/themes/default/style/theme.css
@@ -152,8 +152,9 @@
 		
 		/* profile-search */
 		#profile-search { float:left; position:relative; top:8px; text-align:right; }
-		#profile-search input.search { font-size:80%; width:130px; height:16px; padding:2px 4px; border:none; background-color:#fafafa; }
-		#profile-search input.search-submit { width:22px; height:20px; border:none; color:#fafafa; background-color:#fafafa; background-image:url('/themes/default/images/appleseed-icons.png'); background-position:2px -46px; }
+		
+		/* example-search */
+		#example-search { float:left; position:relative; top:8px; text-align:right; }
 		
 		/* profile-contact */
 		#profile-contact ul li { font-size:90%; list-style-type:none; margin:5px 0 5px 10px; padding:2px; }
@@ -238,6 +239,9 @@
 		/* Search */
 		input.search { width:232px; height:18px; margin:0; float:none; padding:2px 4px; border:none; background-color:#fafafa; }
 		input.search-submit { padding:0; margin:0; width:22px; float:none; height:22px; border:none; color:#fafafa; background-color:#fafafa; background-image:url('/themes/default/images/appleseed-icons.png'); background-position:2px -46px; }
+		
+		input.search.local { font-size:80%; width:130px; height:16px; padding:2px 4px; border:none; background-color:#fafafa; }
+		input.search-submit.local { width:22px; height:20px; border:none; color:#fafafa; background-color:#fafafa; background-image:url('/themes/default/images/appleseed-icons.png'); background-position:2px -46px; }
 		
 		input.search {  -webkit-border-bottom-left-radius:4px; -webkit-border-top-left-radius:4px;  -moz-border-radius-bottomleft:4px; -moz-border-radius-topleft:4px; -border-bottom-left-radius:4px; -border-top-left-radius:4px;  }
 		input.search-submit {  -webkit-border-bottom-right-radius:4px; -webkit-border-top-right-radius:4px;  -moz-border-radius-bottomright:4px; -moz-border-radius-topright:4px;  -border-bottom-right-radius:4px; -border-top-right-radius:4px;  }
